Mon Dec  6 12:15:12 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/tests/AMIDDS/Sender/AmiDds_Sender_exec.cpp:
        * connectors/tests/AMIDDS/Sender/AmiDds_Sender_exec.h:
        * connectors/ami4ccm/tests/GetComp/descriptors/run_test.pl:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
        Resolve some memory leaks, reported by valgrind built.

Mon Dec  6 11:24:12 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/OneFile/Single/OneFile_Connector.mpc:
          Resolved link errors/warnings on windows.

Mon Dec  6 11:14:04 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/OneFile/Multiple/OFM_Connector.mpc:
          Resolved link errors/warnings on windows.

Mon Dec  6 10:17:50 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MultiTopic/Sender/MultiTopic_Sender.mpc:
        * connectors/dds4ccm/tests/MultiTopic/Sender/MultiTopic_Sender_exec.cpp:
          Resolved linker errors on windows.

Mon Dec  6 00:27:20 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_ts_default.mpb:
          Updated some comments

        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector.mpc:
        * connectors/dds4ccm/tests/MultiTopic/Connector/ccm_dds_mt.idl:
        * connectors/dds4ccm/tests/PSAT/ccm_dds_psat.mpc:
          Fixed compile problems when no dds implementation is enabled

Sat Dec  4 10:37:05 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.cpp:
          Replace DDS4CCM logging macros with ACE macros, since this is user code